[package]
name = "pyo3-twisted-web"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Handle Python Twisted requests through a Tower service in Rust"
repository = "https://github.com/sandhose/pyo3-twisted-web/"

[dependencies]
bytes = "1"
futures-util = "0.3.11"
http = "0.2"
http-body = "0.4.4"
pyo3 = { version = "0.17", default-features = false }
pyo3-asyncio = { version = "0.17", features = ["tokio-runtime"] }
tower = { version = "0.4.11", features = ["util"] }
